sintactic.output
Terminals unused in grammar

   ID_AUTO
   ID_CONST
   ID_ENUM
   ID_EXTERN
   ID_GOTO
   ID_REGISTER
   ID_SIGNED
   ID_STATIC
   ID_UNSIGNED
   ID_VOLATILE


State 251 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: ID_IDENTIFICADOR
    2                   | constant
    3                   | ID_STRING
    4                   | '(' expression ')'

    5 constant: ID_INTEGER_CONSTANT
    6         | ID_CHARACTER_CONSTANT
    7         | ID_FLOATING_CONSTANT

    8 postfix_expression: primary_expression
    9                   | postfix_expression '[' expression ']'
   10                   | postfix_expression '(' ')'
   11                   | postfix_expression '(' argument_expression_list ')'
   12                   | postfix_expression '.' ID_IDENTIFICADOR
   13                   | postfix_expression ID_INC_OP
   14                   | postfix_expression ID_DEC_OP

   15 argument_expression_list: assignment_expression
   16                         | argument_expression_list ',' assignment_expression

   17 unary_expression: postfix_expression
   18                 | ID_INC_OP unary_expression
   19                 | ID_DEC_OP unary_expression
   20                 | unary_operator cast_expression
   21                 | ID_SIZEOF unary_expression
   22                 | ID_SIZEOF '(' type_name ')'

   23 unary_operator: '+'
   24               | '-'
   25               | '!'

   26 cast_expression: unary_expression
   27                | '(' type_name ')' cast_expression

   28 multiplicative_expression: cast_expression
   29                          | multiplicative_expression '*' cast_expression
   30                          | multiplicative_expression '/' cast_expression
   31                          | multiplicative_expression '%' cast_expression

   32 additive_expression: multiplicative_expression
   33                    | additive_expression '+' multiplicative_expression
   34                    | additive_expression '-' multiplicative_expression

   35 relational_expression: additive_expression
   36                      | relational_expression '<' additive_expression
   37                      | relational_expression '>' additive_expression
   38                      | relational_expression ID_LE_OP additive_expression
   39                      | relational_expression ID_GE_OP additive_expression

   40 equality_expression: relational_expression
   41                    | equality_expression ID_EQ_OP relational_expression
   42                    | equality_expression ID_NE_OP relational_expression

   43 logical_AND_expression: equality_expression
   44                       | logical_AND_expression ID_AND_OP M equality_expression

   45 logical_OR_expression: logical_AND_expression
   46                      | logical_OR_expression ID_OR_OP M logical_AND_expression

   47 conditional_expression: logical_OR_expression
   48                       | logical_OR_expression '?' expression ':' conditional_expression

   49 constant_expression: conditional_expression

   50 assignment_expression: conditional_expression
   51                      | unary_expression assignment_operator assignment_expression

   52 assignment_operator: '='
   53                    | ID_MUL_ASSIG
   54                    | ID_DIV_ASSIG
   55                    | ID_MOD_ASSIG
   56                    | ID_ADD_ASSIG
   57                    | ID_SUB_ASSIG

   58 expression: assignment_expression
   59           | expression ',' assignment_expression

   60 declaration: declaration_specifiers ';'
   61            | declaration_specifiers init_declarator_list ';'
   62            | ID_TYPEDEF declaration_specifiers declarator ';'

   63 declaration_specifiers: type_specifier

   64 init_declarator_list: init_declarator
   65                     | init_declarator_list ',' init_declarator

   66 init_declarator: declarator
   67                | declarator '=' initializer

   68 type_specifier: ID_VOID
   69               | ID_CHAR
   70               | ID_SHORT
   71               | ID_INT
   72               | ID_LONG
   73               | ID_FLOAT
   74               | ID_DOUBLE
   75               | struct_or_union_specifier
   76               | typedef_name

   77 typedef_name: ID_TYPEDEF_IDENTIFIER

   78 struct_or_union_specifier: struct_or_union ID_IDENTIFICADOR '{' struct_declaration_list '}'
   79                          | struct_or_union '{' struct_declaration_list '}'

   80 struct_or_union: ID_STRUCT
   81                | ID_UNION

   82 struct_declaration_list: struct_declaration
   83                        | struct_declaration_list struct_declaration

   84 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

   85 struct_declarator_list: struct_declarator
   86                       | struct_declarator_list ',' struct_declarator

   87 struct_declarator: declarator

   88 declarator: ID_IDENTIFICADOR
   89           | '(' declarator ')'
   90           | declarator '[' ID_INTEGER_CONSTANT ']'
   91           | declarator '(' parameter_list ')'
   92           | declarator '(' identifier_list ')'
   93           | declarator '(' ')'

   94 parameter_list: parameter_declaration
   95               | parameter_list ',' parameter_declaration

   96 parameter_declaration: declaration_specifiers declarator
   97                      | declaration_specifiers abstract_declarator
   98                      | declaration_specifiers

   99 identifier_list: ID_IDENTIFICADOR
  100                | identifier_list ',' ID_IDENTIFICADOR

  101 type_name: specifier_qualifier_list
  102          | specifier_qualifier_list abstract_declarator

  103 specifier_qualifier_list: type_specifier specifier_qualifier_list
  104                         | type_specifier

  105 abstract_declarator: '(' abstract_declarator ')'
  106                    | '[' ID_INTEGER_CONSTANT ']'
  107                    | abstract_declarator '[' ID_INTEGER_CONSTANT ']'
  108                    | '(' ')'
  109                    | '(' parameter_list ')'
  110                    | abstract_declarator '(' ')'
  111                    | abstract_declarator '(' parameter_list ')'

  112 initializer: assignment_expression
  113            | '{' initializer_list '}'
  114            | '{' initializer_list ',' '}'

  115 initializer_list: initializer
  116                 | initializer_list ',' initializer

  117 statement: labeled_statement
  118          | compound_statement
  119          | expression_statement
  120          | selection_statement
  121          | iteration_statement
  122          | jump_statement

  123 labeled_statement: ID_CASE constant_expression ':' statement
  124                  | ID_DEFAULT ':' statement

  125 compound_statement: '{' '}'
  126                   | '{' declaration_list '}'
  127                   | '{' statement_list '}'
  128                   | '{' declaration_list statement_list '}'

  129 statement_list: statement
  130               | statement_list M statement

  131 expression_statement: ';'
  132                     | expression ';'

  133 if_token: ID_IF

  134 if_cond_header: if_token '(' expression ')'

  135 for_token: ID_FOR

  136 selection_statement: if_cond_header M statement
  137                    | if_cond_header M statement ID_ELSE N M statement
  138                    | ID_SWITCH '(' expression ')' statement

  139 $@1: /* empty */

  140 $@2: /* empty */

  141 iteration_statement: ID_WHILE $@1 '(' M expression ')' $@2 M statement

  142 $@3: /* empty */

  143 iteration_statement: ID_DO M statement ID_WHILE $@3 '(' M expression ')' ';'

  144 $@4: /* empty */

  145 iteration_statement: for_token '(' expression ';' M expression ';' $@4 M expression ')' N M statement

  146 $@5: /* empty */

  147 iteration_statement: for_token '(' ';' M expression ';' $@5 M expression ')' N M statement

  148 $@6: /* empty */

  149 iteration_statement: for_token '(' ';' M ';' $@6 M expression ')' N M statement

  150 $@7: /* empty */

  151 iteration_statement: for_token '(' ';' M ';' $@7 ')' M statement

  152 $@8: /* empty */

  153 iteration_statement: for_token '(' expression ';' M ';' $@8 M expression ')' N M statement

  154 $@9: /* empty */

  155 iteration_statement: for_token '(' expression ';' M ';' $@9 ')' M statement

  156 $@10: /* empty */

  157 iteration_statement: for_token '(' ';' M expression ';' $@10 ')' M statement

  158 $@11: /* empty */

  159 iteration_statement: for_token '(' expression ';' M expression ';' $@11 ')' M statement
  160                    | for_token '(' type_specifier expression error ';' error ';' error ')' statement

  161 jump_statement: ID_CONTINUE ';'
  162               | ID_BREAK ';'
  163               | ID_RETURN ';'
  164               | ID_RETURN expression ';'

  165 translation_unit: external_declaration
  166                 | translation_unit external_declaration

  167 external_declaration: function_definition
  168                     | declaration

  169 @12: /* empty */

  170 function_definition: declarator @12 compound_statement M
  171                    | declaration_specifiers declarator declaration_list compound_statement

  172 @13: /* empty */

  173 function_definition: declaration_specifiers declarator @13 compound_statement M
  174                    | declarator declaration_list compound_statement

  175 declaration_list: declaration
  176                 | declaration_list declaration

  177 M: /* empty */

  178 N: /* empty */


Terminals, with rules where they appear

$end (0) 0
'!' (33) 25
'%' (37) 31
'(' (40) 4 10 11 22 27 89 91 92 93 105 108 109 110 111 134 138 141
    143 145 147 149 151 153 155 157 159 160
')' (41) 4 10 11 22 27 89 91 92 93 105 108 109 110 111 134 138 141
    143 145 147 149 151 153 155 157 159 160
'*' (42) 29
'+' (43) 23 33
',' (44) 16 59 65 86 95 100 114 116
'-' (45) 24 34
'.' (46) 12
'/' (47) 30
':' (58) 48 123 124
';' (59) 60 61 62 84 131 132 143 145 147 149 151 153 155 157 159 160
    161 162 163 164
'<' (60) 36
'=' (61) 52 67
'>' (62) 37
'?' (63) 48
'[' (91) 9 90 106 107
']' (93) 9 90 106 107
'{' (123) 78 79 113 114 125 126 127 128
'}' (125) 78 79 113 114 125 126 127 128
error (256) 160
ID_AUTO (258)
ID_BREAK (259) 162
ID_CASE (260) 123
ID_CHAR (261) 69
ID_CONST (262)
ID_CONTINUE (263) 161
ID_DEFAULT (264) 124
ID_DO (265) 143
ID_DOUBLE (266) 74
ID_ELSE (267) 137
ID_ENUM (268)
ID_EXTERN (269)
ID_FLOAT (270) 73
ID_FOR (271) 135
ID_GOTO (272)
ID_IF (273) 133
ID_INT (274) 71
ID_LONG (275) 72
ID_REGISTER (276)
ID_RETURN (277) 163 164
ID_SHORT (278) 70
ID_SIGNED (279)
ID_SIZEOF (280) 21 22
ID_STATIC (281)
ID_STRUCT (282) 80
ID_SWITCH (283) 138
ID_TYPEDEF (284) 62
ID_UNION (285) 81
ID_UNSIGNED (286)
ID_VOID (287) 68
ID_VOLATILE (288)
ID_WHILE (289) 141 143
ID_INC_OP (290) 13 18
ID_DEC_OP (291) 14 19
ID_LE_OP (292) 38
ID_GE_OP (293) 39
ID_EQ_OP (294) 41
ID_NE_OP (295) 42
ID_AND_OP (296) 44
ID_OR_OP (297) 46
ID_MUL_ASSIG (298) 53
ID_DIV_ASSIG (299) 54
ID_MOD_ASSIG (300) 55
ID_ADD_ASSIG (301) 56
ID_SUB_ASSIG (302) 57
ID_IDENTIFICADOR (303) 1 12 78 88 99 100
ID_TYPEDEF_IDENTIFIER (304) 77
ID_CHARACTER_CONSTANT (305) 6
ID_INTEGER_CONSTANT (306) 5 90 106 107
ID_FLOATING_CONSTANT (307) 7
ID_STRING (308) 3


Nonterminals, with rules where they appear

$accept (74)
    on left: 0
primary_expression (75)
    on left: 1 2 3 4, on right: 8
constant (76)
    on left: 5 6 7, on right: 2
postfix_expression (77)
    on left: 8 9 10 11 12 13 14, on right: 9 10 11 12 13 14 17
argument_expression_list (78)
    on left: 15 16, on right: 11 16
unary_expression (79)
    on left: 17 18 19 20 21 22, on right: 18 19 21 26 51
unary_operator (80)
    on left: 23 24 25, on right: 20
cast_expression (81)
    on left: 26 27, on right: 20 27 28 29 30 31
multiplicative_expression (82)
    on left: 28 29 30 31, on right: 29 30 31 32 33 34
additive_expression (83)
    on left: 32 33 34, on right: 33 34 35 36 37 38 39
relational_expression (84)
    on left: 35 36 37 38 39, on right: 36 37 38 39 40 41 42
equality_expression (85)
    on left: 40 41 42, on right: 41 42 43 44
logical_AND_expression (86)
    on left: 43 44, on right: 44 45 46
logical_OR_expression (87)
    on left: 45 46, on right: 46 47 48
conditional_expression (88)
    on left: 47 48, on right: 48 49 50
constant_expression (89)
    on left: 49, on right: 123
assignment_expression (90)
    on left: 50 51, on right: 15 16 51 58 59 112
assignment_operator (91)
    on left: 52 53 54 55 56 57, on right: 51
expression (92)
    on left: 58 59, on right: 4 9 48 59 132 134 138 141 143 145 147
    149 153 155 157 159 160 164
declaration (93)
    on left: 60 61 62, on right: 168 175 176
declaration_specifiers (94)
    on left: 63, on right: 60 61 62 96 97 98 171 173
init_declarator_list (95)
    on left: 64 65, on right: 61 65
init_declarator (96)
    on left: 66 67, on right: 64 65
type_specifier (97)
    on left: 68 69 70 71 72 73 74 75 76, on right: 63 103 104 160
typedef_name (98)
    on left: 77, on right: 76
struct_or_union_specifier (99)
    on left: 78 79, on right: 75
struct_or_union (100)
    on left: 80 81, on right: 78 79
struct_declaration_list (101)
    on left: 82 83, on right: 78 79 83
struct_declaration (102)
    on left: 84, on right: 82 83
struct_declarator_list (103)
    on left: 85 86, on right: 84 86
struct_declarator (104)
    on left: 87, on right: 85 86
declarator (105)
    on left: 88 89 90 91 92 93, on right: 62 66 67 87 89 90 91 92 93
    96 170 171 173 174
parameter_list (106)
    on left: 94 95, on right: 91 95 109 111
parameter_declaration (107)
    on left: 96 97 98, on right: 94 95
identifier_list (108)
    on left: 99 100, on right: 92 100
type_name (109)
    on left: 101 102, on right: 22 27
specifier_qualifier_list (110)
    on left: 103 104, on right: 84 101 102 103
abstract_declarator (111)
    on left: 105 106 107 108 109 110 111, on right: 97 102 105 107
    110 111
initializer (112)
    on left: 112 113 114, on right: 67 115 116
initializer_list (113)
    on left: 115 116, on right: 113 114 116
statement (114)
    on left: 117 118 119 120 121 122, on right: 123 124 129 130 136
    137 138 141 143 145 147 149 151 153 155 157 159 160
labeled_statement (115)
    on left: 123 124, on right: 117
compound_statement (116)
    on left: 125 126 127 128, on right: 118 170 171 173 174
statement_list (117)
    on left: 129 130, on right: 127 128 130
expression_statement (118)
    on left: 131 132, on right: 119
if_token (119)
    on left: 133, on right: 134
if_cond_header (120)
    on left: 134, on right: 136 137
for_token (121)
    on left: 135, on right: 145 147 149 151 153 155 157 159 160
selection_statement (122)
    on left: 136 137 138, on right: 120
iteration_statement (123)
    on left: 141 143 145 147 149 151 153 155 157 159 160, on right:
    121
$@1 (124)
    on left: 139, on right: 141
$@2 (125)
    on left: 140, on right: 141
$@3 (126)
    on left: 142, on right: 143
$@4 (127)
    on left: 144, on right: 145
$@5 (128)
    on left: 146, on right: 147
$@6 (129)
    on left: 148, on right: 149
$@7 (130)
    on left: 150, on right: 151
$@8 (131)
    on left: 152, on right: 153
$@9 (132)
    on left: 154, on right: 155
$@10 (133)
    on left: 156, on right: 157
$@11 (134)
    on left: 158, on right: 159
jump_statement (135)
    on left: 161 162 163 164, on right: 122
translation_unit (136)
    on left: 165 166, on right: 0 166
external_declaration (137)
    on left: 167 168, on right: 165 166
function_definition (138)
    on left: 170 171 173 174, on right: 167
@12 (139)
    on left: 169, on right: 170
@13 (140)
    on left: 172, on right: 173
declaration_list (141)
    on left: 175 176, on right: 126 128 171 174 176
M (142)
    on left: 177, on right: 44 46 130 136 137 141 143 145 147 149 151
    153 155 157 159 170 173
N (143)
    on left: 178, on right: 137 145 147 149 153


state 0

    0 $accept: . translation_unit $end

    ID_CHAR                shift, and go to state 1
    ID_DOUBLE              shift, and go to state 2
    ID_FLOAT               shift, and go to state 3
    ID_INT                 shift, and go to state 4
    ID_LONG                shift, and go to state 5
    ID_SHORT               shift, and go to state 6
    ID_STRUCT              shift, and go to state 7
    ID_TYPEDEF             shift, and go to state 8
    ID_UNION               shift, and go to state 9
    ID_VOID                shift, and go to state 10
    ID_IDENTIFICADOR       shift, and go to state 11
    ID_TYPEDEF_IDENTIFIER  shift, and go to state 12
    '('                    shift, and go to state 13

    declaration                go to state 14
    declaration_specifiers     go to state 15
    type_specifier             go to state 16
    typedef_name               go to state 17
    struct_or_union_specifier  go to state 18
    struct_or_union            go to state 19
    declarator                 go to state 20
    translation_unit           go to state 21
    external_declaration       go to state 22
    function_definition        go to state 23


state 1

   69 type_specifier: ID_CHAR .

    $default  reduce using rule 69 (type_specifier)


state 2

   74 type_specifier: ID_DOUBLE .

    $default  reduce using rule 74 (type_specifier)


state 3

   73 type_specifier: ID_FLOAT .

    $default  reduce using rule 73 (type_specifier)


state 4

   71 type_specifier: ID_INT .

    $default  reduce using rule 71 (type_specifier)


state 5

   72 type_specifier: ID_LONG .

    $default  reduce using rule 72 (type_specifier)


state 6

   70 type_specifier: ID_SHORT .

    $default  reduce using rule 70 (type_specifier)


state 7

   80 struct_or_union: ID_STRUCT .

    $default  reduce using rule 80 (struct_or_union)


state 8

   62 declaration: ID_TYPEDEF . declaration_specifiers declarator ';'

    ID_CHAR                shift, and go to state 1
    ID_DOUBLE              shift, and go to state 2
    ID_FLOAT               shift, and go to state 3
    ID_INT                 shift, and go to state 4
    ID_LONG                shift, and go to state 5
    ID_SHORT               shift, and go to state 6
    ID_STRUCT              shift, and go to state 7
    ID_UNION               shift, and go to state 9
    ID_VOID                shift, and go to state 10
    ID_TYPEDEF_IDENTIFIER  shift, and go to state 12

    declaration_specifiers     go to state 24
    type_specifier             go to state 16
    typedef_name               go to state 17
    struct_or_union_specifier  go to state 18
    struct_or_union            go to state 19


state 9

   81 struct_or_union: ID_UNION .

    $default  reduce using rule 81 (struct_or_union)


state 10

   68 type_specifier: ID_VOID .

    $default  reduce using rule 68 (type_specifier)


state 11

   88 declarator: ID_IDENTIFICADOR .

    $default  reduce using rule 88 (declarator)


state 12

   77 typedef_name: ID_TYPEDEF_IDENTIFIER .

    $default  reduce using rule 77 (typedef_name)


state 13

   89 declarator: '(' . declarator ')'

    ID_IDENTIFICADOR  shift, and go to state 11
    '('               shift, and go to state 13

    declarator  go to state 25


state 14

  168 external_declaration: declaration .

    $default  reduce using rule 168 (external_declaration)


state 15

   60 declaration: declaration_specifiers . ';'
   61            | declaration_specifiers . init_declarator_list ';'
  171 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  173                    | declaration_specifiers . declarator @13 compound_statement M

    ID_IDENTIFICADOR  shift, and go to state 11
    '('               shift, and go to state 13
    ';'               shift, and go to state 26

    init_declarator_list  go to state 27
    init_declarator       go to state 28
    declarator            go to state 29


state 16

   63 declaration_specifiers: type_specifier .

    $default  reduce using rule 63 (declaration_specifiers)


state 17

   76 type_specifier: typedef_name .

    $default  reduce using rule 76 (type_specifier)


state 18

   75 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 75 (type_specifier)


state 19

   78 struct_or_union_specifier: struct_or_union . ID_IDENTIFICADOR '{' struct_declaration_list '}'
   79                          | struct_or_union . '{' struct_declaration_list '}'

    ID_IDENTIFICADOR  shift, and go to state 30
    '{'               shift, and go to state 31


state 20

   90 declarator: declarator . '[' ID_INTEGER_CONSTANT ']'
   91           | declarator . '(' parameter_list ')'
   92           | declarator . '(' identifier_list ')'
   93           | declarator . '(' ')'
  170 function_definition: declarator . @12 compound_statement M
  174                    | declarator . declaration_list compound_statement

    ID_CHAR                shift, and go to state 1
    ID_DOUBLE              shift, and go to state 2
    ID_FLOAT               shift, and go to state 3
    ID_INT                 shift, and go to state 4
    ID_LONG                shift, and go to state 5
    ID_SHORT               shift, and go to state 6
    ID_STRUCT              shift, and go to state 7
    ID_TYPEDEF             shift, and go to state 8
    ID_UNION               shift, and go to state 9
    ID_VOID                shift, and go to state 10
    ID_TYPEDEF_IDENTIFIER  shift, and go to state 12
    '('                    shift, and go to state 32
    '['                    shift, and go to state 33

    $default  reduce using rule 169 (@12)

    declaration                go to state 34
    declaration_specifiers     go to state 35
    type_specifier             go to state 16
    typedef_name               go to state 17
    struct_or_union_specifier  go to state 18
    struct_or_union            go to state 19
    @12                        go to state 36
    declaration_list           go to state 37


state 21

    0 $accept: translation_unit . $end
  166 translation_unit: translation_unit . external_declaration

    $end                   shift, and go to state 38
    ID_CHAR                shift, and go to state 1
    ID_DOUBLE              shift, and go to state 2
    ID_FLOAT               shift, and go to state 3
    ID_INT                 shift, and go to state 4
    ID_LONG                shift, and go to state 5
    ID_SHORT               shift, and go to state 6
    ID_STRUCT              shift, and go to state 7
    ID_TYPEDEF             shift, and go to state 8
    ID_UNION               shift, and go to state 9
    ID_VOID                shift, and go to state 10
    ID_IDENTIFICADOR       shift, and go to state 11
    ID_TYPEDEF_IDENTIFIER  shift, and go to state 12
    '('                    shift, and go to state 13

    declaration                go to state 14
    declaration_specifiers     go to state 15
    type_specifier             go to state 16
    typedef_name               go to state 17
    struct_or_union_specifier  go to state 18
    struct_or_union            go to state 19
    declarator                 go to state 20
    external_declaration       go to state 39
    function_definition        go to state 23


state 22

  165 translation_unit: external_declaration .

    $default  reduce using rule 165 (translation_unit)


state 23

  167 external_declaration: function_definition .

    $default  reduce using rule 167 (external_declaration)


state 24

   62 declaration: ID_TYPEDEF declaration_specifiers . declarator ';'

    ID_IDENTIFICADOR  shift, and go to state 11
    '('               shift, and go to state 13

    declarator  go to state 40


state 25

   89 declarator: '(' declarator . ')'
   90           | declarator . '[' ID_INTEGER_CONSTANT ']'
   91           | declarator . '(' parameter_list ')'
   92           | declarator . '(' identifier_list ')'
   93           | declarator . '(' ')'

    '('  shift, and go to state 32
    ')'  shift, and go to state 41
    '['  shift, and go to state 33


state 26

   60 declaration: declaration_specifiers ';' .

    $default  reduce using rule 60 (declaration)


state 27

   61 declaration: declaration_specifiers init_declarator_list . ';'
   65 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 42
    ';'  shift, and go to state 43


state 28

   64 init_declarator_list: init_declarator .

    $default  reduce using rule 64 (init_declarator_list)


state 29

   66 init_declarator: declarator .
   67                | declarator . '=' initializer
   90 declarator: declarator . '[' ID_INTEGER_CONSTANT ']'
   91           | declarator . '(' parameter_list ')'
   92           | declarator . '(' identifier_list ')'
   93           | declarator . '(' ')'
  171 function_definition: declaration_specifiers declarator . declaration_list compound_statement
  173                    | declaration_specifiers declarator . @13 compound_statement M

    ID_CHAR                shift, and go to state 1
    ID_DOUBLE              shift, and go to state 2
    ID_FLOAT               shift, and go to state 3
    ID_INT                 shift, and go to state 4
    ID_LONG                shift, and go to state 5
    ID_SHORT               shift, and go to state 6
    ID_STRUCT              shift, and go to state 7
    ID_TYPEDEF             shift, and go to state 8
    ID_UNION               shift, and go to state 9
    ID_VOID                shift, and go to state 10
    ID_TYPEDEF_IDENTIFIER  shift, and go to state 12
    '='                    shift, and go to state 44
    '('                    shift, and go to state 32
    '['                    shift, and go to state 33

    '{'       reduce using rule 172 (@13)
    $default  reduce using rule 66 (init_declarator)

    declaration                go to state 34
    declaration_specifiers     go to state 35
    type_specifier             go to state 16
    typedef_name               go to state 17
    struct_or_union_specifier  go to state 18
    struct_or_union            go to state 19
    @13                        go to state 45
    declaration_list           go to state 46


state 30

   78 struct_or_union_specifier: struct_or_union ID_IDENTIFICADOR . '{' struct_declaration_list '}'

    '{'  shift, and go to state 47


state 31

   79 struct_or_union_specifier: struct_or_union '{' . struct_declaration_list '}'

    ID_CHAR                shift, and go to state 1
    ID_DOUBLE              shift, and go to state 2
    ID_FLOAT               shift, and go to state 3
    ID_INT                 shift, and go to state 4
    ID_LONG                shift, and go to state 5
    ID_SHORT               shift, and go to state 6
    ID_STRUCT              shift, and go to state 7
    ID_UNION               shift, and go to state 9
    ID_VOID                shift, and go to state 10
    ID_TYPEDEF_IDENTIFIER  shift, and go to state 12

    type_specifier             go to state 48
    typedef_name               go to state 17
    struct_or_union_specifier  go to state 18
    struct_or_union            go to state 19
    struct_declaration_list    go to state 49
    struct_declaration         go to state 50
    specifier_qualifier_list   go to state 51


state 32

   91 declarator: declarator '(' . parameter_list ')'
   92           | declarator '(' . identifier_list ')'
   93           | declarator '(' . ')'

    ID_CHAR                shift, and go to state 1
    ID_DOUBLE              shift, and go to state 2
    ID_FLOAT               shift, and go to state 3
    ID_INT                 shift, and go to state 4
    ID_LONG                shift, and go to state 5
    ID_SHORT               shift, and go to state 6
    ID_STRUCT              shift, and go to state 7
    ID_UNION               shift, and go to state 9
    ID_VOID                shift, and go to state 10
    ID_IDENTIFICADOR       shift, and go to state 52
    ID_TYPEDEF_IDENTIFIER  shift, and go to state 12
    ')'                    shift, and go to state 53

    declaration_specifiers     go to state 54
    type_specifier             go to state 16
    typedef_name               go to state 17
    struct_or_union_specifier  go to state 18
    struct_or_union            go to state 19
    parameter_list             go to state 55
    parameter_declaration      go to state 56
    identifier_list            go to state 57


state 33

   90 declarator: declarator '[' . ID_INTEGER_CONSTANT ']'

    ID_INTEGER_CONSTANT  shift, and go to state 58


state 34

  175 declaration_list: declaration .

    $default  reduce using rule 175 (declaration_list)


state 35

   60 declaration: declaration_specifiers . ';'
   61            | declaration_specifiers . init_declarator_list ';'

    ID_IDENTIFICADOR  shift, and go to state 11
    '('               shift, and go to state 13
    ';'               shift, and go to state 26

    init_declarator_list  go to state 27
    init_declarator       go to state 28
    declarator            go to state 59


state 36

  170 function_definition: declarator @12 . compound_statement M

    '{'  shift, and go to state 60

    compound_statement  go to state 61


state 37

  174 function_definition: declarator declaration_list . compound_statement
  176 declaration_list: declaration_list . declaration

    ID_CHAR                shift, and go to state 1
    ID_DOUBLE              shift, and go to state 2
    ID_FLOAT               shift, and go to state 3
    ID_INT                 shift, and go to state 4
    ID_LONG                shift, and go to state 5
    ID_SHORT               shift, and go to state 6
    ID_STRUCT              shift, and go to state 7
    ID_TYPEDEF             shift, and go to state 8
    ID_UNION               shift, and go to state 9
    ID_VOID                shift, and go to state 10
    ID_TYPEDEF_IDENTIFIER  shift, and go to state 12
    '{'                    shift, and go to state 60

    declaration                go to state 62
    declaration_specifiers     go to state 35
    type_specifier             go to state 16
    typedef_name               go to state 17
    struct_or_union_specifier  go to state 18
    struct_or_union            go to state 19
    compound_statement         go to state 63


state 38

    0 $accept: translation_unit $end .

    $default  accept


state 39

  166 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 166 (translation_unit)


state 40

   62 declaration: ID_TYPEDEF declaration_specifiers declarator . ';'
   90 declarator: declarator . '[' ID_INTEGER_CONSTANT ']'
   91           | declarator . '(' parameter_list ')'
   92           | declarator . '(' identifier_list ')'
   93           | declarator . '(' ')'

    '('  shift, and go to state 32
    '['  shift, and go to state 33
    ';'  shift, and go to state 64


state 41

   89 declarator: '(' declarator ')' .

    $default  reduce using rule 89 (declarator)


state 42

   65 init_declarator_list: init_declarator_list ',' . init_declarator

    ID_IDENTIFICADOR  shift, and go to state 11
    '('               shift, and go to state 13

    init_declarator  go to state 65
    declarator       go to state 59


state 43

   61 declaration: declaration_specifiers init_declarator_list ';' .

    $default  reduce using rule 61 (declaration)


state 44

   67 init_declarator: declarator '=' . initializer

    ID_SIZEOF              shift, and go to state 66
    ID_INC_OP              shift, and go to state 67
    ID_DEC_OP              shift, and go to state 68
    ID_IDENTIFICADOR       shift, and go to state 69
    ID_CHARACTER_CONSTANT  shift, and go to state 70
    ID_INTEGER_CONSTANT    shift, and go to state 71
    ID_FLOATING_CONSTANT   shift, and go to state 72
    ID_STRING              shift, and go to state 73
    '+'                    shift, and go to state 74
    '-'                    shift, and go to state 75
    '('                    shift, and go to state 76
    '!'                    shift, and go to state 77
    '{'                    shift, and go to state 78

    primary_expression         go to state 79
    constant                   go to state 80
    postfix_expression         go to state 81
    unary_expression           go to state 82
    unary_operator             go to state 83
    cast_expression            go to state 84
    multiplicative_expression  go to state 85
    additive_expression        go to state 86
    relational_expression      go to state 87
    equality_expression        go to state 88
    logical_AND_expression     go to state 89
    logical_OR_expression      go to state 90
    conditional_expression     go to state 91
    assignment_expression      go to state 92
    initializer                go to state 93


state 45

  173 function_definition: declaration_specifiers declarator @13 . compound_statement M

    '{'  shift, and go to state 60

    compound_statement  go to state 94


state 46

  171 function_definition: declaration_specifiers declarator declaration_list . compound_statement
  176 declaration_list: declaration_list . declaration

    ID_CHAR                shift, and go to state 1
    ID_DOUBLE              shift, and go to state 2
    ID_FLOAT               shift, and go to state 3
    ID_INT                 shift, and go to state 4
    ID_LONG                shift, and go to state 5
    ID_SHORT               shift, and go to state 6
    ID_STRUCT              shift, and go to state 7
    ID_TYPEDEF             shift, and go to state 8
    ID_UNION               shift, and go to state 9
    ID_VOID                shift, and go to state 10
    ID_TYPEDEF_IDENTIFIER  shift, and go to state 12
    '{'                    shift, and go to state 60

    declaration                go to state 62
    declaration_specifiers     go to state 35
    type_specifier             go to state 16
    typedef_name               go to state 17
    struct_or_union_specifier  go to state 18
    struct_or_union            go to state 19
    compound_statement         go to state 95


state 47

   78 struct_or_union_specifier: struct_or_union ID_IDENTIFICADOR '{' . struct_declaration_list '}'

    ID_CHAR                shift, and go to state 1
    ID_DOUBLE              shift, and go to state 2
    ID_FLOAT               shift, and go to state 3
    ID_INT                 shift, and go to state 4
    ID_LONG                shift, and go to state 5
    ID_SHORT               shift, and go to state 6
    ID_STRUCT              shift, and go to state 7
    ID_UNION               shift, and go to state 9
    ID_VOID                shift, and go to state 10
    ID_TYPEDEF_IDENTIFIER  shift, and go to state 12

    type_specifier             go to state 48
    typedef_name               go to state 17
    struct_or_union_specifier  go to state 18
    struct_or_union            go to state 19
    struct_declaration_list    go to state 96
    struct_declaration         go to state 50
    specifier_qualifier_list   go to state 51


state 48

  103 specifier_qualifier_list: type_specifier . specifier_qualifier_list
  104                         | type_specifier .

    ID_CHAR                shift, and go to state 1
    ID_DOUBLE              shift, and go to state 2
    ID_FLOAT               shift, and go to state 3
    ID_INT                 shift, and go to state 4
    ID_LONG                shift, and go to state 5
    ID_SHORT               shift, and go to state 6
    ID_STRUCT              shift, and go to state 7
    ID_UNION               shift, and go to state 9
    ID_VOID                shift, and go to state 10
    ID_TYPEDEF_IDENTIFIER  shift, and go to state 12

    $default  reduce using rule 104 (specifier_qualifier_list)

    type_specifier             go to state 48
    typedef_name               go to state 17
    struct_or_union_specifier  go to state 18
    struct_or_union            go to state 19
    specifier_qualifier_list   go to state 97


state 49

   79 struct_or_union_specifier: struct_or_union '{' struct_declaration_list . '}'
   83 struct_declaration_list: struct_declaration_list . struct_declaration

    ID_CHAR                shift, and go to state 1
    ID_DOUBLE              shift, and go to state 2
    ID_FLOAT               shift, and go to state 3
    ID_INT                 shift, and go to state 4
    ID_LONG                shift, and go to state 5
    ID_SHORT               shift, and go to state 6
    ID_STRUCT              shift, and go to state 7
    ID_UNION               shift, and go to state 9
    ID_VOID                shift, and go to state 10
    ID_TYPEDEF_IDENTIFIER  shift, and go to state 12
    '}'                    shift, and go to state 98

    type_specifier             go to state 48
    typedef_name               go to state 17
    struct_or_union_specifier  go to state 18
    struct_or_union            go to state 19
    struct_declaration         go to state 99
    specifier_qualifier_list   go to state 51


state 50

   82 struct_declaration_list: struct_declaration .

    $default  reduce using rule 82 (struct_declaration_list)


state 51

   84 struct_declaration: specifier_qualifier_list . struct_declarator_list ';'

    ID_IDENTIFICADOR  shift, and go to state 11
    '('               shift, and go to state 13

    struct_declarator_list  go to state 100
    struct_declarator       go to state 101
    declarator              go to state 102


state 52

   99 identifier_list: ID_IDENTIFICADOR .

    $default  reduce using rule 99 (identifier_list)

